--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
            </h4>
        </div>
        <div class="hero_image">
-         <img alt="hero_image" src="WhatsApp Image 2024-09-23 at 16.44.22_3d202a50.jpg"/>
+         <img alt="hero_image" src="images/WhatsApp Image 2024-09-23 at 16.44.22_3d202a50.jpg"/>
        </div>
       </div> 
    </section>
@@ -62,19 +62,19 @@
     <div class="image_container" >
       <div class="designer">
         <div>
-          <img src="8545518_tiktok_message_interaction_logo_communication_icon.png" alt="UI/UX Designer"/>
+          <img src="images/8545518_tiktok_message_interaction_logo_communication_icon.png" alt="UI/UX Designer"/>
           <text>UI/UX Designer</text>
         </div>
       </div>
       <div class="block">
         <div>
-          <img src="7422524_bitcoin_cryptocurrency_blockchain_crypto_currency_icon.png" alt="Blockchain Developer"/>
+          <img src="images/7422524_bitcoin_cryptocurrency_blockchain_crypto_currency_icon.png" alt="Blockchain Developer"/>
           <text>Blockchain Developer</text>
         </div>
       </div>
       <div class="websites">
         <div>
-          <img src="4417110_builder_building site_crane_website_computer_icon.png" alt="Websites Developer"/>
+          <img src="images/4417110_builder_building site_crane_website_computer_icon.png" alt="Websites Developer"/>
           <text>Websites Developer</text>
         </div>
       </div>
@@ -89,11 +89,11 @@
   <h1> Works </h1>
   <div class="works_container">
   <div class="web">
-    <img src="website developer.png" alt="website developer"/>
+    <img src="images/website developer.png" alt="website developer"/>
    <text> Website Developer</text>
   </div>
   <div class="blockchain">
-    <img src="blockchain developer.png" alt="blockchain developer"/>
+    <img src="images/blockchain developer.png" alt="blockchain developer"/>
     <text>Blockchain Developer</text>
   </div>
 </div>
@@ -108,16 +108,16 @@
     </div>
     <div class="contacts">
       <div class="contact">
-       <img src="3225190_app_linkedin_logo_media_popular_icon (1).png" alt="linkedin"/>
+       <img src="images/3225190_app_linkedin_logo_media_popular_icon (1).png" alt="linkedin"/>
       </div>
       <div class="contact">
-        <img src="3225180_app_logo_media_popular_social_icon.png" alt="youtube"/>
+        <img src="images/3225180_app_logo_media_popular_social_icon.png" alt="youtube"/>
       </div>
       <div class="contact">
-        <img src="7089163_gmail_google_icon.png" alt="gmail"/>
+        <img src="images/7089163_gmail_google_icon.png" alt="gmail"/>
       </div>
       <div class="contact">
-        <img src="3225179_app_logo_media_popular_social_icon (1).png" alt="whatsapp"/>
+        <img src="images/3225179_app_logo_media_popular_social_icon (1).png" alt="whatsapp"/>
       </div>
     </div>
     <h4 class="bottom">© Copyright 2024 Aniket Santra. All rights reserved.</h4>
